[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dearpygui-async"
dynamic = ["version"]
description = 'An async helper for dearpygui'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ['dearpygui', 'async', 'python', 'gui','desktop','asyncio']
authors = [
  { name = "CasuallyCalm", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Framework :: AsyncIO"
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/dearpygui-async#readme"
Issues = "https://github.com/unknown/dearpygui-async/issues"
Source = "https://github.com/unknown/dearpygui-async"

[tool.hatch.version]
path = "src/dearpygui_async/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]

[tool.hatch.envs.tests]
dependencies = ['dearpygui']
# path = '.venv'

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/dearpygui_async tests}"

[tool.coverage.run]
source_pkgs = ["dearpygui_async", "tests"]
branch = true
parallel = true
omit = [
  "src/dearpygui_async/__about__.py",
]

[tool.coverage.paths]
dearpygui_async = ["src/dearpygui_async", "*/dearpygui-async/src/dearpygui_async"]
tests = ["tests", "*/dearpygui-async/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
